Fix not showing #screeb-meta_links in the overview page

--- a/assets/dev/sass/component/ui.admin.scss
+++ b/assets/dev/sass/component/ui.admin.scss
@@ -176,8 +176,6 @@
       }
     }
   }
-
-
 }
 
 .wps-adminHeader {
@@ -332,12 +330,14 @@
   }
 
   @media (max-width: 1100px) {
+    justify-content: flex-start;
+
     .wps-adminHeader__activation {
       display: none;
     }
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 785px) {
     position: relative;
     z-index: 1;
     padding: 15px;
@@ -390,24 +390,6 @@
       }
     }
   }
-}
-
-.toplevel_page_wps_overview_page .wps-adminHeader {
-  transform: translateY(-5px);
-  @media screen and (max-width: 782px) {
-    transform: translateY(-10px);
-  }
-}
-
-#screen-meta-links + br + .wps-wrap .wps-adminHeader {
-  transform: translateY(-31px);
-  z-index: -1;
-  position: relative;
-  min-height: 150px;
-}
-
-#screen-meta-links + br + .wps-wrap .wps-wrap__main {
-  transform: translateY(-31px);
 }
 
 .wps-wrap input[type="text"].small-text {
